# RPG

./: CMakeLists.txt  main.c
RPG/: Global.h
RPG/Input/: InputEnums.h  RPGInput.h
RPG/Input/src/: RPGInput.c
RPG/core/: RPGHints.h  RPGWindow.h
RPG/core/renderer/: Pixel.h  RPGRenderer.h
RPG/core/renderer/src/: Pixel.c  RGBRenderer.c
RPG/core/src/: RPGWindow.c
